force-app/main/default/objects/School_History__c/School_History__c.object-meta.xml
<CustomObject>
    <label>School History</label>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>School Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>