force-app/main/default/objects/School_History__c/fields/Access_Accommodations_Provided__c.field-meta.xml
<CustomField>
    <fullName>Access_Accommodations_Provided__c</fullName>
    <label>Access Accommodations Provided</label>
    <length>50</length>
    <type>Text</type>
</CustomField>