force-app/main/default/objects/School_History__c/fields/Co_curricular_Activities__c.field-meta.xml
<CustomField>
    <fullName>Co_curricular_Activities__c</fullName>
    <label>Co-curricular Activities</label>
    <length>50</length>
    <type>Text</type>
</CustomField>