force-app/main/default/objects/School_History__c/fields/Enrichment_Activities__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Activities__c</fullName>
    <label>Enrichment Activities</label>
    <length>50</length>
    <type>Text</type>
</CustomField>