force-app/main/default/objects/School_History__c/fields/Extra_Academic_Support_Tuition__c.field-meta.xml
<CustomField>
    <fullName>Extra_Academic_Support_Tuition__c</fullName>
    <label>Extra Academic Support/Tuition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>