force-app/main/default/objects/School_History__c/fields/Learning_Difficulties__c.field-meta.xml
<CustomField>
    <fullName>Learning_Difficulties__c</fullName>
    <description>Learning Difficulties / Learning Styles</description>
    <inlineHelpText>Learning Difficulties / Learning Styles</inlineHelpText>
    <label>Learning Difficulties</label>
    <length>50</length>
    <type>Text</type>
</CustomField>