force-app/main/default/objects/School_History__c/fields/Other_Social_Groups__c.field-meta.xml
<CustomField>
    <fullName>Other_Social_Groups__c</fullName>
    <label>Other Social Groups</label>
    <length>50</length>
    <type>Text</type>
</CustomField>