force-app/main/default/objects/School_History__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <length>50</length>
    <type>Text</type>
</CustomField>