force-app/main/default/objects/School_History__c/fields/Others_Social_Integration__c.field-meta.xml
<CustomField>
    <fullName>Others_Social_Integration__c</fullName>
    <label>Others Social Integration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>