force-app/main/default/objects/School_History__c/fields/Religious_Activities__c.field-meta.xml
<CustomField>
    <fullName>Religious_Activities__c</fullName>
    <label>Religious Activities</label>
    <length>50</length>
    <type>Text</type>
</CustomField>