force-app/main/default/objects/School_History__c/fields/School_History__c.field-meta.xml
<CustomField>
    <fullName>School_History__c</fullName>
    <label>School History</label>
    <length>100</length>
    <type>Text</type>
</CustomField>