force-app/main/default/objects/School_History__c/fields/Teacher_s_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Teacher_s_Concerns__c</fullName>
    <label>Teacher&apos;s Concerns</label>
    <length>50</length>
    <type>Text</type>
</CustomField>