force-app/main/default/objects/School_History__c/fields/Volunteer_Activities__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Activities__c</fullName>
    <label>Volunteer Activities</label>
    <length>50</length>
    <type>Text</type>
</CustomField>